changed width again

--- a/about.html
+++ b/about.html
@@ -22,7 +22,8 @@
 
             .description {
                 width: 18rem; /* Use more screen width */
-                margin: 2rem; /* Center and add spacing below */
+                margin-right: 2rem; /* Center and add spacing below */
+                margin-left: 2rem;
                 text-align: center !important; /* Ensure the text itself is centered */
             }
 
