--- a/about.html
+++ b/about.html
@@ -177,8 +177,10 @@
                 
                 <br><br> 
 
-                I currently am doing research under Dr. Luis Herndandez-Nunez to create a custom laser-based microscope for optogenetic stimulation 
-                on neurons in zebrafish. In the past, I have been a research assistant in Joanna Aizenberg's Biomineralization and Biomimetics 
+                I am currently doing research in the Stephanie E. Pierce Lab to create biomimetic vertebral columns that 
+                replicate the structural and functional adaptations of early tetrapod spines during the water-to-land transition, 
+                using CAD modeling, 3D printing, and biomechanical testing. In the past, I have been a research assistant 
+                in Joanna Aizenberg's Biomineralization and Biomimetics 
                 Lab at Harvard University helping develop the first-ever platform designed to universally control 
                 and optimize indoor climates. Additionally, I have been working
                 on physically constructing the quadrupedal launch mechanism that supposedly explained 
