changed all files, main change in contact.html

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             <a href="index.html">projects</a>
             <a href="about.html">personal</a>
             <a href="resume.html">resume</a>
+            <a href="contact.html">contact</a>
         </nav>
     </header>
     <!-- Name and Tagline -->
