--- a/about.html
+++ b/about.html
@@ -164,6 +164,7 @@
             <a href="index.html">projects</a>
             <a href="about.html">personal</a>
             <a href="resume.html">resume</a>
+            <a href="contact.html">contact</a>
         </nav>
     </header>
 
