--- a/resume.html
+++ b/resume.html
@@ -81,6 +81,7 @@
             <a href="index.html">projects</a>
             <a href="about.html">personal</a>
             <a href="#resume-container">resume</a>
+            <a href="contact.html">contact</a>
         </nav>
     </header>
 
