--- a/contact.html
+++ b/contact.html
@@ -57,7 +57,7 @@
         button {
             padding: 0.75rem;
             background-color: #f1e9d4;
-            color:#0c0507;
+            color: #0c0507;
             border: none;
             border-radius: 0.5rem;
             font-size: 1rem;
@@ -69,12 +69,24 @@
         }
 
         input::placeholder,
-    textarea::placeholder {
-        font-family: 'Monaco', monospace; /* Use the same font as the message placeholder */
-        color: #888; /* Placeholder text color */
-        font-size: 0.9rem; /* Consistent font size */
+        textarea::placeholder {
+            font-family: 'Monaco', monospace;
+            color: #888;
+            font-size: 0.9rem;
         }
 
+        .success-message, .error-message {
+            margin-top: 1rem;
+            display: none;
+        }
+
+        .success-message {
+            color: #8ab7f1;
+        }
+
+        .error-message {
+            color: red;
+        }
     </style>
 </head>
 <body>
@@ -89,10 +101,10 @@
     </header>
 
     <div class="container">
-        <h1>Contact Me!</h1><br>
-        <p>Feel free to reach out with any questions or opportunities. I'll get back to you as soon as possible!</p>
+        <h1>Contact Me!</h1>
+        <p>Feel free to reach out, and I'll get back to you as soon as possible!</p>
         <br><br>
-        <form action="sendmail.php" method="POST">
+        <form id="contact-form">
             <!-- First and Last Name -->
             <div class="form-row">
                 <div class="form-group">
@@ -120,7 +132,42 @@
             <br>
             <!-- Submit Button -->
             <button type="submit">Send Message</button>
+            <p class="success-message">Your message has been sent successfully!</p>
+            <p class="error-message">There was an error sending your message. Please try again.</p>
         </form>
     </div>
+
+    <script>
+        const form = document.getElementById('contact-form');
+        const successMessage = document.querySelector('.success-message');
+        const errorMessage = document.querySelector('.error-message');
+
+        form.addEventListener('submit', async (e) => {
+            e.preventDefault(); // Prevent default form submission
+
+            const formData = new FormData(form);
+
+            try {
+                const response = await fetch('https://formspree.io/f/your_form_id', {
+                    method: 'POST',
+                    body: formData,
+                    headers: {
+                        Accept: 'application/json'
+                    }
+                });
+
+                if (response.ok) {
+                    form.reset();
+                    successMessage.style.display = 'block';
+                    errorMessage.style.display = 'none';
+                } else {
+                    throw new Error('Form submission failed');
+                }
+            } catch (error) {
+                successMessage.style.display = 'none';
+                errorMessage.style.display = 'block';
+            }
+        });
+    </script>
 </body>
 </html>
