changed home page for carousel

--- a/resume.html
+++ b/resume.html
@@ -78,10 +78,10 @@
     <!-- Fixed Header -->
     <header>
         <nav>
-            <a href="index.html">projects</a>
-            <a href="about.html">personal</a>
-            <a href="#resume-container">resume</a>
-            <a href="contact.html">contact</a>
+            <a href="index.html">Projects</a>
+            <a href="about.html">Personal</a>
+            <a href="#resume-container">Resume</a>
+            <a href="contact.html">Contact</a>
         </nav>
     </header>
 
