--- a/about.html
+++ b/about.html
@@ -161,10 +161,10 @@
     <!-- Fixed Header -->
     <header>
         <nav>
-            <a href="index.html">projects</a>
-            <a href="about.html">personal</a>
-            <a href="resume.html">resume</a>
-            <a href="contact.html">contact</a>
+            <a href="index.html">Projects</a>
+            <a href="about.html">Personal</a>
+            <a href="resume.html">Resume</a>
+            <a href="contact.html">Contact</a>
         </nav>
     </header>
 
