new pictures to homepage

--- a/index.html
+++ b/index.html
@@ -52,6 +52,16 @@
                 <img src ="indexmedia/lab.jpg" >
                 <div class="caption">working in the lab!</div>
             </div>
+            <div class="slide">
+                <img src ="indexmedia/meandsofia.jpeg" >
+                <div class="caption">working on motor board!</div>
+            </div>
+
+            <div class="slide">
+                <img src ="indexmedia/prettymotors.jpg" >
+                <div class="caption">motor board!</div>
+            </div>
+
 
             <div class="slide">
                 <video autoplay loop muted playsinline>
