--- a/resume.html
+++ b/resume.html
@@ -87,12 +87,12 @@
 
     <!-- Desktop Resume Viewer -->
     <div id="resume-container">
-        <iframe src="indexmedia/resume521.pdf" title="Hannah Nguyen Resume"></iframe>
+        <iframe src="indexmedia/HannahNguyenResume2025SUMMERwebsite.pdf" title="Hannah Nguyen Resume"></iframe>
     </div>
 
     <!-- Mobile Download Button -->
     <div class="mobile-download-button">
-        <a href="indexmedia/resume521.pdf" download>Download Resume</a>
+        <a href="indexmedia/HannahNguyenResume2025SUMMERwebsite.pdf" download>Download Resume</a>
     </div>
 </body>
 </html>
