--- a/about.html
+++ b/about.html
@@ -174,13 +174,14 @@
             <p>
                 Hello! I am a mechanical engineering student at Harvard University from Randolph, Massachusetts. 
                 I thrive in building ideas from scratch, modeling, prototyping, and combining technical expertise with creative
-                problem-solving. 
+                problem-solving. I currently work as a mechanical engineering intern at IntuitiveMotion.ai where I assemble
+                structures and design/create solutions for hardware problems using Solidworks.
                 
                 <br><br> 
 
-                I am currently doing research in the Stephanie E. Pierce Lab to create biomimetic vertebral columns that 
+                In the past, I've done research in the Stephanie E. Pierce Lab to create biomimetic vertebral columns that 
                 replicate the structural and functional adaptations of early tetrapod spines during the water-to-land transition, 
-                using CAD modeling, 3D printing, and biomechanical testing. In the past, I have been a research assistant 
+                using CAD modeling, 3D printing, and biomechanical testing. I have also been a research assistant 
                 in Joanna Aizenberg's Biomineralization and Biomimetics 
                 Lab at Harvard University helping develop the first-ever platform designed to universally control 
                 and optimize indoor climates. Additionally, I have been working
