more phone edits + others

--- a/contact.html
+++ b/contact.html
@@ -102,10 +102,14 @@
 
     <div class="container">
         <h1>Contact Me!</h1>
-        <p>Feel free to reach out, and I'll get back to you as soon as possible!</p>
+                <br><br>
+
+        <div class = "contact">
+            <p><a class="contact-link" href="https://www.linkedin.com/in/hannahnguyendev/" target="_blank" rel="noopener noreferrer">linkedin.com/in/hannahnguyendev/</a></p>
+            <p><a class="contact-link" href="mailto:hnguyen@college.harvard.edu">hnguyen@college.harvard.edu</a></p>
+        </div>
         <br><br>
-        <form id="contact-form">
-            <!-- First and Last Name -->
+        <!-- <form id="contact-form">
             <div class="form-row">
                 <div class="form-group">
                     <label for="first-name">First*</label>
@@ -115,26 +119,25 @@
                     <label for="last-name">Last*</label>
                     <input type="text" id="last-name" name="last_name" placeholder="Last Name" required>
                 </div>
-            </div>
+            </div> -->
 
-            <!-- Email Address -->
-            <div class="form-group">
+            <!-- <div class="form-group">
                 <label for="email">Email address*</label>
                 <input type="email" id="email" name="email" placeholder="Enter your email" required>
             </div>
             <br>
-            <!-- Message -->
+
             <div class="form-group">
                 <label for="message">Message*</label>
                 <textarea id="message" name="message" rows="5" placeholder="Type your message here" required></textarea>
             </div>
 
             <br>
-            <!-- Submit Button -->
+
             <button type="submit">Send Message</button>
             <p class="success-message">Your message has been sent successfully!</p>
             <p class="error-message">There was an error sending your message. Please try again.</p>
-        </form>
+        </form> -->
     </div>
 
     <script>
