--- a/contact.html
+++ b/contact.html
@@ -101,14 +101,15 @@
     </header>
 
     <div class="container">
-        <h1>Contact Me!</h1>
-                <br><br>
-
+        <h1>Reach out!</h1>
         <div class = "contact">
             <p><a class="contact-link" href="https://www.linkedin.com/in/hannahnguyendev/" target="_blank" rel="noopener noreferrer">linkedin.com/in/hannahnguyendev/</a></p>
             <p><a class="contact-link" href="mailto:hnguyen@college.harvard.edu">hnguyen@college.harvard.edu</a></p>
         </div>
         <br><br>
+
+        <img src="indexmedia/cat.gif" alt="cat" style="width:180px;height:180px;">
+
         <!-- <form id="contact-form">
             <div class="form-row">
                 <div class="form-group">
