--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
         <!-- Bridge -->
         <div class="project-row" style="justify-content: flex-end;">
             <div class="project-description" style="text-align: left; margin-left: 2rem; margin-right: 3rem;">
-                <h2>Bridge Competition: Chappell Prone to Buckle</h2>
+                <h2>Bridge Competition</h2>
                 <p class="short-description">
                     As part of the ES120 Bridge Building Competition, our team engineered a high-performance arch bridge 
                     constructed from plywood, spanning 12 inches with a 2 inch height, adhering to a 6:1 span-to-depth ratio
