--- a/index.html
+++ b/index.html
@@ -156,6 +156,119 @@
             </div>
         </div>
         
+                <!-- ES96 -->
+<div class="project-row" style="justify-content: flex-end;">
+    <div class="project-description" style="text-align: left; margin-left: 2rem; margin-right: 3rem;">
+        <h2>ES96: Engineering Problem Solving and Design Project</h2>
+        <h3 style="display:flex; align-items:center; gap:0.5rem;">
+            <span class="expand-icon" onclick="toggleDescription(this)">
+                <i class="fa-solid fa-hammer"
+                style="font-size:1.5rem; line-height:1; transition:transform 0.3s ease;">
+                </i>
+            </span>
+            Reverse Engineering Assignment
+        </h3>
+
+        <!-- <h3>Reverse Engineering Assignment</h3>
+
+        <p class="short-description">
+            <span class="expand-icon" onclick="toggleDescription(this)">
+                <i class="fa-solid fa-hammer" style="font-size: 2rem; transition: transform 0.3s ease;"></i>
+            </span>
+        </p> -->
+
+        <!-- EVERYTHING TOGGLEABLE GOES IN HERE -->
+        <div class="full-description" style="display: none;">
+
+            <p>
+                Reverse engineered a consumer desktop stapler to analyze its mechanical design, 
+                usability tradeoffs, and manufacturing cost structure through a detailed Labor, 
+                Burden, and Materials (LBM) model.
+
+                The product was fully disassembled to identify key 
+                components, materials, and mechanical subsystems. 
+                A design analysis examined how form and internal mechanisms 
+                support usability while highlighting limitations. A detailed LBM cost model 
+                was developed to estimate full-scale manufacturing costs, accounting for 
+                individual part materials, assembly steps, labor time, 
+                and burdened labor rates, resulting in a total estimated manufacturing 
+                cost of approximately $6 per unit.
+            </p>
+
+            <!-- IMAGES NOW TOGGLE WITH TEXT -->
+            <div class="media-grid">
+                <div class="media-row">
+                    <figure style="text-align:center;">
+                        <img src="indexmedia/staplerimage.jpg" style="width:15rem; height:15rem;" data-modal>
+                        <figcaption>Stapler!</figcaption>
+                    </figure>
+
+                    <figure style="text-align:center;">
+                        <img src="indexmedia/stapler.jpeg" style="width:15rem; height:15rem;" data-modal>
+                        <figcaption>Stapler Parts!</figcaption>
+                    </figure>
+
+                    <figure style="text-align:center;">
+                        <img src="indexmedia/LBM.png" style="width:15rem; height:15rem;" data-modal>
+                        <figcaption>LBM model!</figcaption>
+                    </figure>
+                </div>
+            </div>
+        </div>
+
+<!-- 2nd es96 project -->
+        <h3 style="display:flex; align-items:center; gap:0.5rem;">
+            <span class="expand-icon" onclick="toggleDescription(this)">
+                <i class="fa-solid fa-hammer"
+                style="font-size:1.5rem; line-height:1; transition:transform 0.3s ease;">
+                </i>
+            </span>
+            Systems Modeling Assignment
+        </h3>
+
+        <!-- EVERYTHING TOGGLEABLE GOES IN HERE -->
+        <div class="full-description" style="display: none;">
+
+            <!-- <p>
+                Reverse engineered a consumer desktop stapler to analyze its mechanical design, 
+                usability tradeoffs, and manufacturing cost structure through a detailed Labor, 
+                Burden, and Materials (LBM) model.
+
+                The product was fully disassembled to identify key 
+                components, materials, and mechanical subsystems. 
+                A design analysis examined how form and internal mechanisms 
+                support usability while highlighting limitations. A detailed LBM cost model 
+                was developed to estimate full-scale manufacturing costs, accounting for 
+                individual part materials, assembly steps, labor time, 
+                and burdened labor rates, resulting in a total estimated manufacturing 
+                cost of approximately $6 per unit.
+            </p> -->
+
+            <!-- IMAGES NOW TOGGLE WITH TEXT -->
+            <!-- <div class="media-grid">
+                <div class="media-row">
+                    <figure style="text-align:center;">
+                        <img src="indexmedia/staplerimage.jpg" style="width:15rem; height:15rem;" data-modal>
+                        <figcaption>Stapler!</figcaption>
+                    </figure>
+
+                    <figure style="text-align:center;">
+                        <img src="indexmedia/stapler.jpeg" style="width:15rem; height:15rem;" data-modal>
+                        <figcaption>Stapler Parts!</figcaption>
+                    </figure>
+
+                    <figure style="text-align:center;">
+                        <img src="indexmedia/LBM.png" style="width:15rem; height:15rem;" data-modal>
+                        <figcaption>LBM model!</figcaption>
+                    </figure>
+                </div> -->
+            <!-- </div> -->
+        </div>
+
+    </div>
+</div>
+        <br><br><br><br><br><br><br>
+
         <!-- Research tetrapods -->
         <div class="project-row">        
             <!-- Media Grid -->
